# prism

./: .env.example  .gitignore  README.md  cli.sh  start.sh  stop.sh
backend/: pyproject.toml  server.py  tic-tac-toe.html
backend/.workflow/: node-coder.md  node-planner.md  node-researcher.md
backend/contracts/: schemas.py  state.py
backend/db/: database.py  models.py
backend/docs/superpowers/plans/: 2026-03-29-ai-coding-assistant-integration.md
backend/graphs/: factory_complex.py  factory_medium.py  factory_simple.py  nodes.py  sandbox.py
backend/prompts/: __init__.py  coder.md  coder.py  deployer.py  planner.md  planner.py  qa.py  researcher.md  researcher.py  reviewer.md  reviewer.py
backend/routes/: agents.py  approvals.py  events.py  factory.py  messages.py  projects.py  streaming.py  utils.py  workflows.py
backend/services/: checkpointer.py  condition_evaluator.py  demo_setup.py  event_bus.py  goose_manager.py  guardrails.py  health_monitor.py  memory_manager.py  path_guard.py  pipeline.py  project_factory.py  scheduler.py  skill_loader.py  stream_parser.py  telegram_bot.py
backend/skills/: api-checklist.md  brief-validation.md  code-review.md  conventions.md  failure-recovery.md  frontend-checklist.md  game-checklist.md  planning.md  research.md  security-deep.md  security-review.md  tdd.md
backend/tests/: conftest.py  test_complexity.py  test_contracts.py  test_health.py  test_integration.py  test_path_guard.py  test_qa.py  test_recovery.py  test_resilience.py  test_state.py  test_stream_parser.py  test_validator.py  test_workflow_resilience.py
(+44 files in other folders)
